@@ -1,2 +1,3 @@
-- stdin on -
+- stdin/stdout on -
+  - unbini
 - improve string table functions (hash table)
